# my_pyo3

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
my_pyo3/: __init__.py
src/: lib.rs  pymod.rs  rsfunc.rs
src/tests/: mod.rs
