[package]
name = "my_pyo3"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import my_pyo3`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "my_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use axpy;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "lib"]

[dependencies]
numpy = "0.19.0"
# below allows add feature 
pyo3 = {version = "0.19.0", features = ["extension-module"]}
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }